Refactor index.html structure for improved readability and organization

--- a/index.html
+++ b/index.html
@@ -9,34 +9,63 @@
     />
   </head>
   <body>
-    <h1>CS Notes</h1>
-    <p>
-      Overview of lectures and topics. Each entry shows the day/lecture ID,
-      short gist, and link to the note.
-    </p>
-    <h2>Table of Contents</h2>
-    <ul>
-      <li>
-        Day 1 – Lecture 1: Introduction to Computer Science
-        <a href="notes/day1-intro.html">Read</a>
-        <small>by Hassan</small>
-      </li>
-      <li>
-        Day 2 – Lecture 2: Data Types
-        <a href="notes/day2-datatypes.html">Read</a>
-        <small>by ContributorName</small>
-      </li>
-      <li>
-        Day 3 – Lecture 3: Control Structures
-        <a href="notes/day3-control.html">Read</a>
-        <small>by ContributorName</small>
-      </li>
-    </ul>
+    <main>
+      <section id="overview">
+        <h1>CS Notes</h1>
+        <p>
+          Lightweight, mobile-friendly Computer Science notes. Each entry shows
+          the day/lecture ID, short gist, author, and a link to the full note.
+        </p>
+      </section>
 
-    <h2>Resources</h2>
-    <ul>
-      <li><a href="resources/syllabus.pdf">Course Syllabus</a></li>
-      <li><a href="resources/reference-links.html">Reference Links</a></li>
-    </ul>
+      <section id="contents">
+        <h2>Table of Contents</h2>
+        <ul>
+          <li>
+            <strong>Day 1 – Lecture 1:</strong> Introduction to Computer Science
+            <a href="notes/day1-intro.html">Read</a>
+            <small>by Hassan</small>
+          </li>
+          <li>
+            <strong>Day 2 – Lecture 2:</strong> Data Types
+            <a href="notes/day2-datatypes.html">Read</a>
+            <small>by ContributorName</small>
+          </li>
+          <li>
+            <strong>Day 3 – Lecture 3:</strong> Control Structures
+            <a href="notes/day3-control.html">Read</a>
+            <small>by ContributorName</small>
+          </li>
+        </ul>
+      </section>
+
+      <section id="resources">
+        <h2>Resources</h2>
+        <ul>
+          <li>
+            <a href="resources/syllabus.pdf">Course Syllabus</a> – PDF version
+            of the official syllabus.
+          </li>
+          <li>
+            <a href="resources/reference-links.html">Reference Links</a> –
+            Curated tutorials, blogs, and documentation for extra study.
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <footer style="text-align: center; margin-top: 2em">
+      <p>
+        Want to contribute your knowledge?
+        <a href="https://github.com/your-username/cs-notes" target="_blank">
+          GitHub
+        </a>
+      </p>
+      <p>
+        Made with ♥ by
+        <a href="https://hassanamirii.github.io/">Hassan2bit</a>
+      </p>
+      <p><small>cs-notes v1.0 — 2025</small></p>
+    </footer>
   </body>
 </html>
