fix: projext github link

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
     <footer style="text-align: center; margin-top: 2em">
       <p>
         Want to contribute your knowledge?
-        <a href="https://github.com/your-username/cs-notes" target="_blank">
+        <a href="https://github.com/HassanAmirii/csnotes" target="_blank">
           GitHub
         </a>
       </p>
       <p>
         Made with ♥ by
-        <a href="https://hassanamirii.github.io/">Hassan2bit</a>
+        <a href="https://hassanamirii.github.io/" target="_blank">Hassan2bit</a>
       </p>
       <p><small>cs-notes v1.0 — 2025</small></p>
     </footer>
