--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <main>
       <section id="overview">
-        <h1>CS Notes</h1>
+        <h1>KWASU CS NOTES</h1>
         <p>
           Lightweight, mobile-friendly Computer Science notes. Each entry shows
           the day/lecture ID, short gist, author, and a link to the full note.
@@ -66,6 +66,10 @@
         <a href="https://hassanamirii.github.io/" target="_blank">Hassan2bit</a>
       </p>
       <p><small>cs-notes v1.0 — 2025</small></p>
+      <img
+        src="https://nukochannel.neocities.org/NukoImg/Banners/Dividers/nukoPipe.gif"
+        alt="Nuko Pipe Divider"
+      />
     </footer>
   </body>
 </html>
