--- a/notes/day1-intro.html
+++ b/notes/day1-intro.html
@@ -12,7 +12,7 @@
     <p><a href="../index.html">← Back to Home</a></p>
 
     <h1>Day 1 – Introduction to Computer Science</h1>
-    <p><em>Author: Hassan</em></p>
+    <p><em>Author: Hassan2bit</em></p>
 
     <h2>Overview</h2>
     <p>
