--- a/index.html
+++ b/index.html
@@ -7,39 +7,73 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
     />
+
+    <style>
+      body {
+        background-image: url("/assets/shley-tree.png");
+      }
+    </style>
   </head>
   <body>
     <main>
-      <section id="overview">
+      <section
+        style="
+          text-align: center;
+          margin-top: 2em;
+          background-image: url('/assets/black-orchid.png');
+          padding: 1em;
+        "
+        id="overview"
+      >
         <h1>KWASU CS NOTES</h1>
+        <p>Lightweight, mobile-friendly Computer Science notes.</p>
+
         <p>
-          Lightweight, mobile-friendly Computer Science notes. Each entry shows
-          the day/lecture ID, short gist, author, and a link to the full note.
+          Want to contribute your knowledge?
+          <a href="https://github.com/HassanAmirii/csnotes" target="_blank"
+            >GitHub</a
+          >
+        </p>
+
+        <p>
+          Leave a comment on a problem, report an issue, or say thank you:
+          <a href="https://kwasucsnotes.atabook.org/"> Guest Book</a>
         </p>
       </section>
 
-      <section id="contents">
+      <section style="margin-top: 5em" id="contents">
         <h2>Table of Contents</h2>
+
         <ul>
           <li>
-            <strong>Day 1 – Lecture 1:</strong> Introduction to Computer Science
+            Introduction to Computer Science
             <a href="notes/day1-intro.html">Read</a>
-            <small>by Hassan</small>
+            <small>by Hassan2bit</small>
           </li>
           <li>
-            <strong>Day 2 – Lecture 2:</strong> Data Types
+            Data Types
             <a href="notes/day2-datatypes.html">Read</a>
-            <small>by ContributorName</small>
+            <small>by olarewaju abiola</small>
           </li>
           <li>
-            <strong>Day 3 – Lecture 3:</strong> Control Structures
-            <a href="notes/day3-control.html">Read</a>
-            <small>by ContributorName</small>
+            Algorithms Basics
+            <a href="notes/day1-algorithms.html">Read</a>
+            <small>by rafiu jabr</small>
+          </li>
+          <li>
+            Data Structures Overview
+            <a href="notes/day2-datastructures.html">Read</a>
+            <small>by raheem ridwan</small>
+          </li>
+          <li>
+            Object-Oriented Programming
+            <a href="notes/day1-oop.html">Read</a>
+            <small>by kolapo</small>
           </li>
         </ul>
       </section>
 
-      <section id="resources">
+      <section style="margin-top: 5em" id="resources">
         <h2>Resources</h2>
         <ul>
           <li>
@@ -54,13 +88,7 @@
       </section>
     </main>
 
-    <footer style="text-align: center; margin-top: 2em">
-      <p>
-        Want to contribute your knowledge?
-        <a href="https://github.com/HassanAmirii/csnotes" target="_blank">
-          GitHub
-        </a>
-      </p>
+    <footer style="text-align: center; margin-top: 10em">
       <p>
         Made with ♥ by
         <a href="https://hassanamirii.github.io/" target="_blank">Hassan2bit</a>
