update: changed from water css to simple css frmework

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <title>CS Notes Overview</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
-    />
+<!-- Minified version -->
+<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 
-    <style>
+<!-- Un-Minified version -->
+<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+<style>
       body {
-        background-image: url("/assets/shley-tree.png");
+        background-image: url("/assets/black-orchid.png");
       }
     </style>
   </head>
@@ -37,14 +37,15 @@
 
         <p>
           Leave a comment on a problem, report an issue, or say thank you:
-          <a href="https://kwasucsnotes.atabook.org/"> Guest Book</a>
+          <a href="https://kwasucsnotes.atabook.org/" target="_blank"
+> Guest Book</a>
         </p>
       </section>
 
       <section style="margin-top: 5em" id="contents">
         <h2>Table of Contents</h2>
 
-        <ul>
+        <ol>
           <li>
             Introduction to Computer Science
             <a href="notes/day1-intro.html">Read</a>
@@ -70,7 +71,7 @@
             <a href="notes/day1-oop.html">Read</a>
             <small>by kolapo</small>
           </li>
-        </ul>
+        </ol>
       </section>
 
       <section style="margin-top: 5em" id="resources">
