--- a/notes/day1-intro.html
+++ b/notes/day1-intro.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Day 1 – Introduction to Computer Science</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
-    />
-  </head>
+<!-- Minified version -->
+<link rel="stylesheet" href="https://unpkg.com/simpledotcss/simple.min.css">
+
+<!-- Un-minified version -->
+<link rel="stylesheet" href="https://unpkg.com/simpledotcss/simple.css"> </head>
   <body>
     <p><a href="../index.html">← Back to Home</a></p>
 
