--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <title>CS Notes Overview</title>
-<!-- Minified version -->
-<link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <!-- Minified version -->
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css" />
 
-<!-- Un-Minified version -->
-<link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+    <!-- Un-Minified version -->
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css" />
   </head>
   <body>
     <main>
       <section
-        style="
-          text-align: center;
-          margin-top: 2em;
-          padding: 1em;
-        "
+        style="text-align: center; margin-top: 2em; padding: 1em"
         id="overview"
       >
         <h1>KWASU CS NOTES</h1>
-        <p>Lightweight, mobile-friendly Computer Science notes.</p>
 
         <p>
           Want to contribute your knowledge?
@@ -30,9 +25,11 @@
         </p>
 
         <p>
-          Leave a comment on a problem, report an issue, or say thank you:
-          <a href="https://kwasucsnotes.atabook.org/" target="_blank"
-> Guest Book</a>
+          Can't code and wish leave a comment on a problem, report an issue, or
+          say thank you:
+          <a href="https://kwasucsnotes.atabook.org/" target="_blank">
+            Guest Book</a
+          >
         </p>
       </section>
 
