update index.html and style.css: enhance footer and link styles

--- a/index.html
+++ b/index.html
@@ -15,21 +15,20 @@
           students at KWASU.
         </p>
         <p>
-          Managed by
+          Made with ❤️ by
           <a
             href="https://hassanamirii.github.io/"
             target="_blank"
             class="owner-link"
-            >Hassan2bit</a
+            >hassan2bit</a
           >
         </p>
         <div class="header-links">
-          <!-- <a href="https://github.com/HassanAmirii/csnotes" target="_blank"
-            >contribute on GitHub</a
-          > -->
-          <a href="https://kwasucsnotes.atabook.org/" target="_blank"
-            >Drop a msg on suggestions, question or resources or just say thank
-            you</a
+          <a
+            href="https://api.whatsapp.com/send?phone=2349121724193"
+            target="_blank"
+            >Want to collab, share resources or just say thank you:
+            <span class="whatsapp">whatsapp (pls be expressive)</span></a
           >
         </div>
       </header>
