Add course materials and landing pages for CS101 and PHY101
- Created cs101.html for the CS101 course outline, including modules on computing concepts, components, and applications.
- Developed cslanding.html as the landing page for CS101, providing links to resources and past test questions.
- Added cheatphy.html for PHY101, summarizing essential physics formulas and definitions.
- Implemented phy101.html for the PHY101 course outline, detailing major topics in introductory mechanics.
- Established physicslanding.html as the landing page for PHY101, featuring links to course materials and resources.

--- a/CS101/cslanding.html
+++ b/CS101/cslanding.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MTH101 Landing Page</title>
+    <title>CS101 Landing Page</title>
     <style>
       :root {
         --primary-color: #0d6efd;
@@ -135,15 +135,15 @@
       </nav>
 
       <header>
-        <h1>MTH101</h1>
-        <p>Your central hub for all MTH101 study materials and resources.</p>
+        <h1>CS101</h1>
+        <p>Your central hub for all CS101 study materials and resources.</p>
       </header>
 
       <main>
         <ol>
           <li>
             <div class="list-item-content">
-              <h3><a href="math101.html">Course Outline</a></h3>
+              <h3><a href="cs101.html">Course Outline</a></h3>
               <p>
                 A complete breakdown of all modules and topics covered in the
                 course syllabus.
@@ -154,7 +154,7 @@
             <div class="list-item-content">
               <h3>
                 <a
-                  href="https://drive.google.com/drive/folders/12oVwSEzRbmTRupiVeE4l_flB_vuOgy7x"
+                  href="https://drive.google.com/drive/folders/1k3NOdO6EuHPEYyjUh17WAKZHxyAiSRH2"
                   >Past Test Questions</a
                 >
               </h3>
@@ -176,7 +176,7 @@
           </li> -->
           <li>
             <div class="list-item-content">
-              <h3><a href="cheatmath.html">Formula Cheat Sheet</a></h3>
+              <h3><a href="cheatcs.html">Formula Cheat Sheet</a></h3>
               <p>
                 A concise, one-page summary of the most important formulas and
                 identities.
@@ -187,11 +187,11 @@
             <div class="list-item-content">
               <h3>
                 <a
-                  href="https://ocw.mit.edu/courses/6-042j-mathematics-for-computer-science-fall-2010/pages/syllabus/"
-                  >MIT OCW: resources on mathematics for computer science</a
+                  href="https://www.open.edu/openlearn/mod/oucontent/view.php?id=109020"
+                  >open course ware: resources on introduction to computing</a
                 >
               </h3>
-              <p>Do well to make the best use of it however you can</p>
+              <p>Do well to make the best use of it!</p>
             </div>
           </li>
           <li>
