--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
               Materials on mechanics, properties of matter, heat, and basic
               principles of physics.
             </p>
-            <a href="#" class="resource-link">View Resources</a>
+            <a href="PHY101/physicslanding.html" class="resource-link"
+              >View Resources</a
+            >
           </div>
           <div class="resource-card">
             <h3>STA111: Intro to Statistics</h3>
