--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
               University-specific introduction to the core tenets of computer
               science and its applications.
             </p>
-            <a href="#" class="resource-link">View Resources</a>
+            <a href="CS101/cslanding.html" class="resource-link"
+              >View Resources</a
+            >
           </div>
           <div class="resource-card">
             <h3>MTH101: Algebra & Trigonometry</h3>
