--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
               Core materials on communication skills, grammar, and academic
               writing standards.
             </p>
-            <a href="#" class="resource-link">View Resources</a>
+            <a href="GST111/gstlanding.html" class="resource-link"
+              >View Resources</a
+            >
           </div>
           <div class="resource-card">
             <h3>CSC101: Computer Science Fundamentals</h3>
