--- a/CS101/cslanding.html
+++ b/CS101/cslanding.html
@@ -176,10 +176,10 @@
           </li> -->
           <li>
             <div class="list-item-content">
-              <h3><a href="cheatcs.html">Formula Cheat Sheet</a></h3>
+              <h3><a href="cheatcs.html">CS Cheat Sheet</a></h3>
               <p>
-                A concise, one-page summary of the most important formulas and
-                identities.
+                A concise, one-page summary of the most important concepts and
+                definitions.
               </p>
             </div>
           </li>
