--- a/CSC101/csclanding.html
+++ b/CSC101/csclanding.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GST111 Landing Page</title>
+    <title>CSC101 Landing Page</title>
     <style>
       :root {
         --primary-color: #0d6efd;
@@ -135,15 +135,15 @@
       </nav>
 
       <header>
-        <h1>GST111</h1>
-        <p>Your central hub for all GST111 study materials and resources.</p>
+        <h1>CSC101</h1>
+        <p>Your central hub for all CSC101 study materials and resources.</p>
       </header>
 
       <main>
         <ol>
           <li>
             <div class="list-item-content">
-              <h3><a href="gst111.html">Course Outline</a></h3>
+              <h3><a href="csc101.html">Course Outline</a></h3>
               <p>
                 A complete breakdown of all modules and topics covered in the
                 course syllabus.
@@ -154,11 +154,14 @@
             <div class="list-item-content">
               <h3>
                 <a
-                  href="https://drive.google.com/drive/folders/1oDHRwEyM8zA-p3HHRz_9nwZE36h58_3t"
-                  >PDF TEXTBOOK</a
+                  href="https://drive.google.com/drive/folders/16B7wvmDPMswvFI0WReKRk5FMd2dt9G5X"
+                  >Past Test Questions</a
                 >
               </h3>
-              <p>whole pdf files of GST 111</p>
+              <p>
+                Review questions from previous tests to prepare for the test
+                assessment.
+              </p>
             </div>
           </li>
           <!-- <li>
@@ -173,24 +176,24 @@
           </li> -->
           <li>
             <div class="list-item-content">
-              <h3><a href="cheatgst.html">GST11 Cheat Sheet</a></h3>
+              <h3><a href="cheatcsc.html">CSC Cheat Sheet</a></h3>
               <p>
                 A concise, one-page summary of the most important concepts and
                 definitions.
               </p>
             </div>
           </li>
-          <!-- <li>
+          <li>
             <div class="list-item-content">
               <h3>
                 <a
-                  href="https://ocw.mit.edu/courses/8-01l-physics-i-classical-mechanics-fall-2005/pages/lecture-notes/"
-                  >MIT open course ware: resources on physics (mechanics)</a
+                  href="https://developer.mozilla.org/en-US/docs/Learn_web_development/Howto/Web_mechanics/How_does_the_Internet_work"
+                  >MDN Web Docs: How does the Internet work?</a
                 >
               </h3>
               <p>Do well to make the best use of it!</p>
             </div>
-          </li> -->
+          </li>
           <li>
             <div class="list-item-content">
               <h3>
