--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
               Notes and practice problems for descriptive statistics,
               probability, and data analysis.
             </p>
-            <a href="#" class="resource-link">View Resources</a>
+            <a href="STA111/stalanding.html" class="resource-link"
+              >View Resources</a
+            >
           </div>
         </div>
       </section>
