add timetable page

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
             >Read More</a
           >
         </div>
+        <h2>A suggested study schedule</h2>
+        <div class="resource-card single-card">
+          <p>
+            This schedule is built on principles of active recall and spaced
+            repetition to help you effectively master the material from all your
+            compiled resources and achieve a high CGPA.
+          </p>
+          <a href="/timetable.html" target="_blank" class="resource-link"
+            >Read More</a
+          >
+        </div>
       </section>
 
       <section id="course-materials">
