--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <body>
     <main class="container">
       <header>
-        <h2>Computer Science 100-Level Resource Hub</h2>
-        <p>
+        <h1>Computer Science 100-Level Resource Hub</h1>
+        <p class="subtitle">
           A curated collection of study materials and outlines for first-year
           students at KWASU.
         </p>
-        <p>
+
+        <p class="creator-credit">
           Made with ❤️ by
           <a
             href="https://hassanamirii.github.io/"
@@ -23,14 +24,6 @@
             >hassan2bit</a
           >
         </p>
-        <div class="header-links">
-          <a
-            href="https://api.whatsapp.com/send?phone=2349121724193"
-            target="_blank"
-            >Want to collab, share resources or just say thank you:
-            <span class="whatsapp">whatsapp (pls be expressive)</span></a
-          >
-        </div>
       </header>
 
       <section id="study-strategies">
@@ -124,6 +117,22 @@
             >
           </div>
         </div>
+      </section>
+
+      <section id="feedback-section">
+        <h2>Contribute & Give Feedback</h2>
+        <p>
+          This resource hub is a community effort. If you find a broken link, a
+          typo, or have a suggestion for a new resource that could help others,
+          please let us know. Your feedback helps improve this site for
+          everyone.
+        </p>
+        <a
+          href="https://forms.gle/hp8ADAL8Ng8wAV6A9"
+          target="_blank"
+          class="feedback-button"
+          >Submit via Google Form</a
+        >
       </section>
     </main>
 
