update index.html and add resources.html for additional learning materials

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
   <body>
     <main class="container">
       <header>
-        <h1>Computer Science 100-Level Resource Hub</h1>
+        <h1>Computer Science</h1>
         <p class="subtitle">
           A curated collection of study materials and outlines for first-year
           students at KWASU.
         </p>
-
         <p class="creator-credit">
           Made with ❤️ by
           <a
@@ -137,6 +136,10 @@
     </main>
 
     <footer>
+      <p class="creator-credit">
+        More resources
+        <a href="/resources.html" class="owner-link">here!</a>
+      </p>
       <p><small>cs-resources v2.1 — 2025</small></p>
     </footer>
   </body>
