--- a/CS101/cslanding.html
+++ b/CS101/cslanding.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CS101 Landing Page</title>
+    <title>COS101 Landing Page</title>
     <style>
       :root {
         --primary-color: #0d6efd;
@@ -12,7 +12,7 @@
         --text-color: #212529;
         --border-color: #dee2e6;
         --card-background: #ffffff;
-        --link-hover-color: #0a58ca;
+        --hover-bg-color: #f8f9fa;
       }
 
       body {
@@ -72,21 +72,34 @@
         background-color: var(--card-background);
         border: 1px solid var(--border-color);
         border-radius: 8px;
-        padding: 1em;
+        overflow: hidden; /* Ensures child elements respect the border radius */
       }
 
       main li {
         counter-increment: resource-counter;
-        padding: 1.5em;
         display: flex;
         align-items: flex-start;
+        transition: background-color 0.2s ease-in-out;
+      }
+
+      main li:hover {
+        background-color: var(--hover-bg-color);
       }
 
       main li:not(:last-child) {
         border-bottom: 1px solid var(--border-color);
       }
 
-      main li::before {
+      main li a {
+        display: flex;
+        align-items: flex-start;
+        width: 100%;
+        padding: 1.5em;
+        text-decoration: none;
+        color: inherit;
+      }
+
+      main li a::before {
         content: counter(resource-counter);
         font-weight: 700;
         font-size: 1.5em;
@@ -109,17 +122,12 @@
       .list-item-content h3 {
         margin: 0;
         font-size: 1.25em;
-      }
-
-      .list-item-content h3 a {
-        text-decoration: none;
         color: var(--text-color);
         transition: color 0.2s ease-in-out;
       }
 
-      .list-item-content h3 a:hover {
+      main li:hover .list-item-content h3 {
         color: var(--primary-color);
-        text-decoration: underline;
       }
 
       .list-item-content p {
@@ -135,75 +143,71 @@
       </nav>
 
       <header>
-        <h1>CS101</h1>
-        <p>Your central hub for all CS101 study materials and resources.</p>
+        <h1>COS101</h1>
+        <p>Your central hub for all COS101 study materials and resources.</p>
       </header>
 
       <main>
         <ol>
           <li>
-            <div class="list-item-content">
-              <h3><a href="cs101.html">Course Outline</a></h3>
-              <p>
-                A complete breakdown of all modules and topics covered in the
-                course syllabus.
-              </p>
-            </div>
+            <a href="cs101.html">
+              <div class="list-item-content">
+                <h3>Course Outline</h3>
+                <p>
+                  A complete breakdown of all modules and topics covered in the
+                  course syllabus.
+                </p>
+              </div>
+            </a>
           </li>
           <li>
-            <div class="list-item-content">
-              <h3>
-                <a
-                  href="https://drive.google.com/drive/folders/1k3NOdO6EuHPEYyjUh17WAKZHxyAiSRH2"
-                  >Past Test Questions</a
-                >
-              </h3>
-              <p>
-                Review questions from previous tests to prepare for the test
-                assessment.
-              </p>
-            </div>
-          </li>
-          <!-- <li>
-            <div class="list-item-content">
-              <h3><a href="#">Past Exam Questions</a></h3>
-              <p>
-                WORK IN PROGRESS: I'M STILL LOOKING FOR PAST EXAM QUESTIONS
-                PLEASE IF YOU HAVE ANY KINDLY SHARE WITH ME THANKS> 09121724193
-                whatsapp
-              </p>
-            </div>
-          </li> -->
-          <li>
-            <div class="list-item-content">
-              <h3><a href="cheatcs.html">CS Cheat Sheet</a></h3>
-              <p>
-                A concise, one-page summary of the most important concepts and
-                definitions.
-              </p>
-            </div>
+            <a
+              href="https://drive.google.com/drive/folders/1k3NOdO6EuHPEYyjUh17WAKZHxyAiSRH2"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>Past Test Questions</h3>
+                <p>
+                  Review questions from previous tests to prepare for the test
+                  assessment.
+                </p>
+              </div>
+            </a>
           </li>
           <li>
-            <div class="list-item-content">
-              <h3>
-                <a
-                  href="https://www.open.edu/openlearn/mod/oucontent/view.php?id=109020"
-                  >open course ware: resources on introduction to computing</a
-                >
-              </h3>
-              <p>Do well to make the best use of it!</p>
-            </div>
+            <a href="cheatcs.html">
+              <div class="list-item-content">
+                <h3>COS101 Cheat Sheet</h3>
+                <p>
+                  A concise, one-page summary of the most important concepts and
+                  definitions.
+                </p>
+              </div>
+            </a>
           </li>
           <li>
-            <div class="list-item-content">
-              <h3>
-                <a
-                  href="https://drive.google.com/drive/folders/1-ydgqpUkS1JX2-Qni3CUbOinBXjZAMlG?usp=drive_link"
-                  >Complete Resources on Google drive by seniors</a
-                >
-              </h3>
-              <p>A curated list of external links, and recommended readings.</p>
-            </div>
+            <a
+              href="https://www.open.edu/openlearn/mod/oucontent/view.php?id=109020"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>OpenLearn: Introduction to Computing</h3>
+                <p>Do well to make the best use of it!</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://drive.google.com/drive/folders/1-ydgqpUkS1JX2-Qni3CUbOinBXjZAMlG?usp=drive_link"
+              target="_blank"
+            >
+              <div class="list-item-content">
+                <h3>Complete Resources on Google Drive</h3>
+                <p>
+                  A curated list of external links, and recommended readings.
+                </p>
+              </div>
+            </a>
           </li>
         </ol>
       </main>
