--- a/PHY101/query.html
+++ b/PHY101/query.html
@@ -18,15 +18,35 @@
       body {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, "Helvetica Neue", Arial, sans-serif;
-        display: grid;
-        place-items: center;
+        display: flex; /* Changed from grid to flex */
+        flex-direction: column; /* Stack breadcrumb and container */
+        align-items: center; /* Center items horizontally */
         min-height: 100vh;
         margin: 0;
+        padding: 1em; /* Add padding to body */
+        box-sizing: border-box; /* Include padding */
         background-color: var(--background-color);
         color: var(--text-color);
       }
+      /* Breadcrumb Styling */
+      .breadcrumb {
+        width: 100%;
+        max-width: 500px; /* Match container width */
+        margin-bottom: 1em; /* Space below breadcrumb */
+        text-align: left;
+      }
+      .breadcrumb a {
+        font-weight: 500;
+        color: var(--primary-color);
+        text-decoration: none;
+        font-size: 1.1em;
+      }
+      .breadcrumb a:hover {
+        text-decoration: underline;
+      }
+
       .container {
-        width: 90%;
+        width: 100%; /* Take full width within body padding */
         max-width: 500px;
         background-color: var(--card-background);
         border: 1px solid var(--border-color);
@@ -34,6 +54,7 @@
         padding: 2.5em;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
         text-align: center;
+        box-sizing: border-box; /* Include padding */
       }
       h1 {
         font-size: 2em;
@@ -62,6 +83,7 @@
         color: var(--primary-color);
         text-align: left;
         transition: background-color 0.2s, color 0.2s;
+        box-sizing: border-box; /* Include padding */
       }
       .difficulty-btn:hover {
         background-color: var(--primary-color);
@@ -72,8 +94,15 @@
         font-size: 0.9em;
         color: var(--secondary-color);
       }
-      /* CORRECTED LINE BELOW */
       .difficulty-btn:hover span {
+        color: #f0f0f0;
+      }
+      .difficulty-btn.selected {
+        background-color: var(--primary-color);
+        color: white;
+        border-color: var(--primary-color);
+      }
+      .difficulty-btn.selected span {
         color: #f0f0f0;
       }
 
@@ -93,18 +122,20 @@
         transition: background-color 0.2s, transform 0.1s;
         margin-top: 1.5em;
       }
-
       .start-quiz:hover {
         background-color: var(--success-hover-color);
         transform: translateY(-2px);
       }
-
       .start-quiz:active {
         transform: translateY(0px);
       }
     </style>
   </head>
   <body>
+    <nav class="breadcrumb">
+      <a href="physicslanding.html">&larr; Back to physics hub</a>
+    </nav>
+
     <div class="container">
       <h1 id="selection-title">Select a Quiz Mode</h1>
       <p>Choose how you'd like to practice.</p>
@@ -121,7 +152,6 @@
         <button type="button" class="difficulty-btn" data-difficulty="mad-max">
           Mad Max <span>(mix of all : 30 Questions)</span>
         </button>
-
         <button type="button" class="start-quiz">Start Quiz</button>
       </div>
     </div>
