--- a/PHY101/physicslanding.html
+++ b/PHY101/physicslanding.html
@@ -153,6 +153,14 @@
       <main>
         <ol>
           <li>
+            <a href="query.html">
+              <div class="list-item-content">
+                <h3>Course introductory quiz</h3>
+                <p>How ready are you for PHY101? Take this quiz to find out!</p>
+              </div>
+            </a>
+          </li>
+          <li>
             <a href="phy101.html">
               <div class="list-item-content">
                 <h3>Course Outline</h3>
