--- a/PHY101/quiz.html
+++ b/PHY101/quiz.html
@@ -32,7 +32,7 @@
              </div>
              <!-- Right Group (Keep IDs/data-action for JS) -->
              <div class="nav-group-right">
-                 <button id="submitButton" type="submit" style="display: none;">Submit Quiz</button>
+                 <button id="submitButton" type="submit" >Submit Quiz</button>
                  <button id="stopButton" data-action="stopButton" type="button">Cancel Quiz</button>
              </div>
           </div>
