--- a/PHY101/physicslanding.html
+++ b/PHY101/physicslanding.html
@@ -155,7 +155,7 @@
           <li>
             <a href="query.html">
               <div class="list-item-content">
-                <h3>Course introductory quiz</h3>
+                <h3>Introductory quiz</h3>
                 <p>How ready are you for PHY101? Take this quiz to find out!</p>
               </div>
             </a>
