--- a/STA111/stalanding.html
+++ b/STA111/stalanding.html
@@ -153,6 +153,14 @@
       <main>
         <ol>
           <li>
+            <a href="query.html">
+              <div class="list-item-content">
+                <h3>Introductory quiz</h3>
+                <p>How ready are you for STA111? Take this quiz to find out!</p>
+              </div>
+            </a>
+          </li>
+          <li>
             <a href="sta111.html">
               <div class="list-item-content">
                 <h3>Course Outline</h3>
