--- a/MTH101/mathlanding.html
+++ b/MTH101/mathlanding.html
@@ -150,6 +150,14 @@
       <main>
         <ol>
           <li>
+            <a href="query.html">
+              <div class="list-item-content">
+                <h3>Introductory quiz</h3>
+                <p>How ready are you for MTH101? Take this quiz to find out!</p>
+              </div>
+            </a>
+          </li>
+          <li>
             <a href="math101.html">
               <div class="list-item-content">
                 <h3>Course Outline</h3>
